- tracker/utils.py: Added functions to load tracker settings files.
- viewer.py: Added a tab called "Tune" to visualize the effect of tuning detection parameters.

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -274,7 +274,13 @@
     "# Angular speed cut: pi/2*30 = quarter turn between 2 frames at 30 fps.\n",
     "cut_ranges    = { 'd_wall':[-np.inf,np.inf], 'v':[0,0.2*30], \n",
     "                  'v_ang':[-np.pi/2*30,np.pi/2*30] }\n",
-    "cut_label     = ', '.join([ f'{v[0]:g}<={k}<={v[1]:g}' for k,v in cut_ranges.items() ])"
+    "# This is used to name the output directory and make figure titles.\n",
+    "# The \"=\" should be \"<=\" however ntfs doesn't allow \"<\" in filenames.\n",
+    "cut_label     = ', '.join([ f'{v[0]:g}={k}={v[1]:g}' for k,v in cut_ranges.items() ])\n",
+    "\n",
+    "cut_dir = os.path.join(analysis_dir,cut_label)\n",
+    "if not os.path.exists(cut_dir):\n",
+    "    os.mkdir(cut_dir)"
    ]
   },
   {
@@ -290,86 +296,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bins_area     = np.linspace(0,600,100)\n",
-    "# bins_aspect   = np.linspace(1,15,100)\n",
-    "# prebins_dWall = np.linspace(-0.1,1.1,100) # Multiply by R_cm before using.\n",
-    "# prebins_v     = np.linspace(*cut_ranges['v'],100) # Multiply by R_cm before using.\n",
-    "# bins_vAng     = np.linspace(*cut_ranges['v_ang'],100)\n",
-    "# prebins_pairDist = np.linspace(0,2,60) # Multiply by R_cm before using.\n",
-    "# bins_pairAng  = np.linspace(0,np.pi,30)\n",
+    "bins_area     = np.linspace(0,600,100)\n",
+    "bins_aspect   = np.linspace(1,15,100)\n",
+    "prebins_dWall = np.linspace(-0.1,1.1,100) # Multiply by R_cm before using.\n",
+    "prebins_v     = np.linspace(*cut_ranges['v'],100) # Multiply by R_cm before using.\n",
+    "bins_vAng     = np.linspace(*cut_ranges['v_ang'],100)\n",
+    "prebins_pairDist = np.linspace(0,2,60) # Multiply by R_cm before using.\n",
+    "bins_pairAng  = np.linspace(0,np.pi,30)\n",
     "\n",
-    "# trial_data    = {}\n",
+    "trial_data    = {}\n",
     "\n",
-    "# for i,trial_file in enumerate(trials.index):\n",
-    "#     print('\\r'+' '*200+'\\r'+f'{i+1}/{len(trials)}',end='')\n",
+    "for i,trial_file in enumerate(trials.index):\n",
+    "    print('\\r'+' '*200+'\\r'+f'{i+1}/{len(trials)}',end='')\n",
     "    \n",
-    "#     trial  = load_trial(trial_file, load_data=True)\n",
-    "#     ranges = { 'd_wall': [ x*trial['R_cm'] for x in cut_ranges['d_wall'] ], \n",
-    "#                'v':      [ x*trial['R_cm'] for x in cut_ranges['v'] ], \n",
-    "#                'v_ang':  cut_ranges['v_ang'] }\n",
-    "#     trial  = compute_kinematics(trial)\n",
-    "#     with warnings.catch_warnings():\n",
-    "#         warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
-    "#         trial = compute_cuts(trial, ranges)\n",
-    "#     globals().update(trial)\n",
+    "    trial  = load_trial(trial_file, load_data=True)\n",
+    "    ranges = { 'd_wall': [ x*trial['R_cm'] for x in cut_ranges['d_wall'] ], \n",
+    "               'v':      [ x*trial['R_cm'] for x in cut_ranges['v'] ], \n",
+    "               'v_ang':  cut_ranges['v_ang'] }\n",
+    "    trial  = compute_kinematics(trial)\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
+    "        trial = compute_cuts(trial, ranges)\n",
+    "    globals().update(trial)\n",
     "    \n",
-    "#     # Fish area and Fish aspect ratio histograms.\n",
-    "#     # Useful to tune the tracker's contour filters.\n",
-    "#     hist_area   = np.histogram(data[:,:n_ind,3], bins=bins_area )\n",
-    "#     hist_aspect = np.histogram(data[:,:n_ind,4], bins=bins_aspect )\n",
+    "    # Fish area and Fish aspect ratio histograms.\n",
+    "    # Useful to tune the tracker's contour filters.\n",
+    "    hist_area   = np.histogram(data[:,:n_ind,3], bins=bins_area )\n",
+    "    hist_aspect = np.histogram(data[:,:n_ind,4], bins=bins_aspect )\n",
     "    \n",
-    "#     # Distribution of distance to the wall.\n",
-    "#     bins = prebins_dWall * R_cm\n",
-    "#     vals = d_wall.flatten()\n",
-    "#     hist_dWall = np.histogram(vals[~np.isnan(vals)],bins=bins)\n",
+    "    # Distribution of distance to the wall.\n",
+    "    bins = prebins_dWall * R_cm\n",
+    "    vals = d_wall.flatten()\n",
+    "    hist_dWall = np.histogram(vals[~np.isnan(vals)],bins=bins)\n",
     "    \n",
-    "#     # Speed distribution.\n",
-    "#     bins = prebins_v * R_cm\n",
-    "#     vals = v.flatten()\n",
-    "#     hist_v = np.histogram(vals[~np.isnan(vals)],bins=bins)\n",
+    "    # Speed distribution.\n",
+    "    bins = prebins_v * R_cm\n",
+    "    vals = v.flatten()\n",
+    "    hist_v = np.histogram(vals[~np.isnan(vals)],bins=bins)\n",
     "    \n",
-    "#     # Angular speed distribution.\n",
-    "#     bins = bins_vAng\n",
-    "#     vals = vel[:,:,2].flatten()\n",
-    "#     hist_vAng = np.histogram(vals[~np.isnan(vals)],bins=bins)\n",
+    "    # Angular speed distribution.\n",
+    "    bins = bins_vAng\n",
+    "    vals = vel[:,:,2].flatten()\n",
+    "    hist_vAng = np.histogram(vals[~np.isnan(vals)],bins=bins)\n",
     "    \n",
-    "#     # Joint distribution of pair distance and pair angle,\n",
-    "#     if n_ind>1:\n",
-    "#         bins_d  = prebins_pairDist * R_cm\n",
-    "#         bins_a  = bins_pairAng\n",
-    "#         J1,J2 = np.triu_indices(n_ind,1)\n",
-    "#         d     = np.hypot(pos[:,J1,0]-pos[:,J2,0],pos[:,J1,1]-pos[:,J2,1]).flatten()\n",
-    "#         a     = (pos[:,J1,2]-pos[:,J2,2]).flatten()\n",
-    "#         a     = a - 2*np.pi*np.rint(a/(2*np.pi))\n",
-    "#         I     = np.logical_not(np.logical_or(np.isnan(d),np.isnan(a)))\n",
-    "#         d     = d[I]\n",
-    "#         a     = np.absolute(a[I])\n",
-    "#         # 2D histogram of pairwise distance and angle.\n",
-    "#         hist_distAng = np.histogram2d(d, a, bins=(bins_d,bins_a), density=True)\n",
-    "#         # Pairwise polar alignment parameter vs pair distance.\n",
-    "#         K = np.digitize(d,bins_d)\n",
-    "#         with warnings.catch_warnings():\n",
-    "#             warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
-    "#             p = np.array([ np.nanmean(np.cos(a[K==i])) for i in range(len(bins_d)+1) ])\n",
-    "#         polar = p[1:-1],bins_d\n",
-    "#     else:\n",
-    "#         hist_distAng,polar = None,None\n",
+    "    # Joint distribution of pair distance and pair angle,\n",
+    "    if n_ind>1:\n",
+    "        bins_d  = prebins_pairDist * R_cm\n",
+    "        bins_a  = bins_pairAng\n",
+    "        J1,J2 = np.triu_indices(n_ind,1)\n",
+    "        d     = np.hypot(pos[:,J1,0]-pos[:,J2,0],pos[:,J1,1]-pos[:,J2,1]).flatten()\n",
+    "        a     = (pos[:,J1,2]-pos[:,J2,2]).flatten()\n",
+    "        a     = a - 2*np.pi*np.rint(a/(2*np.pi))\n",
+    "        I     = np.logical_not(np.logical_or(np.isnan(d),np.isnan(a)))\n",
+    "        d     = d[I]\n",
+    "        a     = np.absolute(a[I])\n",
+    "        # 2D histogram of pairwise distance and angle.\n",
+    "        hist_distAng = np.histogram2d(d, a, bins=(bins_d,bins_a), density=True)\n",
+    "        # Pairwise polar alignment parameter vs pair distance.\n",
+    "        K = np.digitize(d,bins_d)\n",
+    "        with warnings.catch_warnings():\n",
+    "            warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
+    "            p = np.array([ np.nanmean(np.cos(a[K==i])) for i in range(len(bins_d)+1) ])\n",
+    "        polar = p[1:-1],bins_d\n",
+    "    else:\n",
+    "        hist_distAng,polar = None,None\n",
     "\n",
-    "#     # Save output.\n",
-    "#     trial_data[trial_file] = { k:v for k,v in locals().items() if k in \n",
-    "#                                [ 'valid_fraction', 'hist_area', 'hist_aspect', 'hist_dWall', \n",
-    "#                                  'hist_v', 'hist_vAng', 'hist_distAng', 'polar' ] }\n",
-    "# #     break\n",
+    "    # Save output.\n",
+    "    trial_data[trial_file] = { k:v for k,v in locals().items() if k in \n",
+    "                               [ 'valid_fraction', 'hist_area', 'hist_aspect', 'hist_dWall', \n",
+    "                                 'hist_v', 'hist_vAng', 'hist_distAng', 'polar' ] }\n",
+    "#     break\n",
     "\n",
     "\n",
-    "# # Removing < and > because ntfs filesystem doesn't accept them in file names.\n",
-    "# cut_dir = os.path.join(analysis_dir,cut_label.replace('>','').replace('<',''))\n",
-    "# if not os.path.exists(cut_dir):\n",
-    "#     os.mkdir(cut_dir)\n",
-    "\n",
-    "# f = os.path.join(cut_dir,'trial_data')\n",
-    "# # pickle.dump( {'trial_data':trial_data}, bz2.BZ2File(f+'.bz2','w') )\n",
-    "# pickle.dump( {'trial_data':trial_data}, open(f+'.pik','wb') )"
+    "f = os.path.join(cut_dir,'trial_data')\n",
+    "# pickle.dump( {'trial_data':trial_data}, bz2.BZ2File(f+'.bz2','w') )\n",
+    "pickle.dump( {'trial_data':trial_data}, open(f+'.pik','wb') )"
    ]
   },
   {
@@ -585,23 +586,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# f    = os.path.join(analysis_dir,cut_label,'trial_data')\n",
-    "# data = pickle.load( open(f+'.pik','rb') )\n",
-    "# globals().update(data)\n",
+    "f    = os.path.join(analysis_dir,cut_label,'trial_data')\n",
+    "data = pickle.load( open(f+'.pik','rb') )\n",
+    "globals().update(data)\n",
     "\n",
-    "# for pop,files1 in trials.groupby('pop').groups.items():\n",
-    "#     fig,ax = plt.subplots(1,2,figsize=(12,3))\n",
-    "#     fig.suptitle(pop)\n",
-    "#     for age,files2 in trials.loc[files1].groupby('age').groups.items():\n",
-    "#         for i,name in enumerate(['hist_area','hist_aspect']):\n",
-    "#             b = trial_data[files2[0]][name][1]\n",
-    "#             h = np.mean([trial_data[f][name][0] for f in files2],axis=0)\n",
-    "#             ax[i].plot(b[:-1],h,label=f'{age}')\n",
+    "for pop,files1 in trials.groupby('pop').groups.items():\n",
+    "    fig,ax = plt.subplots(1,2,figsize=(12,3))\n",
+    "    fig.suptitle(pop)\n",
+    "    for age,files2 in trials.loc[files1].groupby('age').groups.items():\n",
+    "        for i,name in enumerate(['hist_area','hist_aspect']):\n",
+    "            b = trial_data[files2[0]][name][1]\n",
+    "            h = np.mean([trial_data[f][name][0] for f in files2],axis=0)\n",
+    "            ax[i].plot(b[:-1],h,label=f'{age}')\n",
     "        \n",
-    "#     for i in range(2):\n",
-    "#         ax[i].set_title(['Fish Area','Fish Aspect Ratio'][i])\n",
-    "#         ax[i].legend(title='age')\n",
-    "#     plt.show()"
+    "    for i in range(2):\n",
+    "        ax[i].set_title(['Fish Area','Fish Aspect Ratio'][i])\n",
+    "        ax[i].legend(title='age')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -681,7 +682,7 @@
     "\n",
     "for f in trials.index:\n",
     "    vf = trial_data[f]['valid_fraction']\n",
-    "    if vf['final']<0.4:\n",
+    "    if vf['final']<0.8:\n",
     "        print(trials.loc[f]['trial_name'])\n",
     "        print(', '.join([ f'{k}:{v:.2g}' for k,v in vf.items() ]))\n",
     "        print()"
@@ -854,7 +855,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
