--- a/track.ipynb
+++ b/track.ipynb
@@ -100,6 +100,8 @@
     "input_files = sorted(glob('../raw_videos/*.avi'))\n",
     "# input_files = [ '../raw_videos/Pa_Fri_43dpf_GroupC_n5_20200711_1550.avi' ]\n",
     "\n",
+    "print(len(input_files))\n",
+    "\n",
     "input_dict = {}\n",
     "for input_file in input_files:\n",
     "    logging.info(input_file)\n",
@@ -134,12 +136,10 @@
     "for i,row in df.iterrows():\n",
     "    trial,par,val = row[:3]\n",
     "    for f,d in input_dict.items():\n",
-    "        if fnmatch(d['trial_name'],trial):\n",
+    "        if fnmatch(d['trial_name'].lower(),trial.lower()):\n",
     "            set_nested_dict(input_dict[f], par.split('.'), val)\n",
     "\n",
     "print(len(input_dict))\n",
-    "\n",
-    "# input_dict = dict(list(input_dict.items())[7:13])\n",
     "\n",
     "# for f,D in input_dict.items():\n",
     "#     print('   ',D['trial_name'])"
@@ -352,16 +352,6 @@
     "plt.legend(loc=(1.05,0.5))\n",
     "plt.axis('equal')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with np.printoptions(suppress=True,precision=2):\n",
-    "    print(data[125])"
    ]
   },
   {
