- Added a spreadsheet with default settings ("settings_defaults.xlsx") and renamed the one with trial specific settings "settings_tweaks.xlsx".
- repair_corrupt_videos.ipynb: The video status cell now extract the file size and size per frame as well. The idea was that videos with an abnormally high size per frame could have hidden frames due to a kind of corruption we were not previously looking for. I didn't find any, and the method is not very sensitive because the size per frame of valid videos varies a lot from trial to trial.

--- a/track.ipynb
+++ b/track.ipynb
@@ -132,7 +132,7 @@
     "        set_nested_dict(d[key_list[0]],key_list[1:],val)\n",
     "        \n",
     "# Load settings variants.\n",
-    "df = pd.read_excel('settings.xlsx')\n",
+    "df = pd.read_excel('settings_tweaks.xlsx')\n",
     "for i,row in df.iterrows():\n",
     "    trial,par,val = row[:3]\n",
     "    for f,d in input_dict.items():\n",
