- viewer.py: Removed unused dependency "QtMultimediaWidgets", which is missing from conda's version of PyQt5.
- viewer.py: Added shortcuts "ctrl+left" and "ctrl+right" to move several frames at a time. The number of frames is controlled by the "Read one frame in" spinbox.

- background_subtractor.ipynb: The previous version was based on the old cvtracer. I started updating it to work with trilab-tracker but didn't finish.

--- a/track.ipynb
+++ b/track.ipynb
@@ -94,11 +94,12 @@
    "source": [
     "''' Select input files to track and an output directory for each. '''\n",
     "\n",
-    "tracking_dir = '../tracking/full_21-01-22'\n",
-    "# tracking_dir = 'output'\n",
+    "# tracking_dir = '../tracking/full_21-02-12'\n",
+    "tracking_dir = 'output'\n",
     "\n",
-    "input_files = sorted(glob('../raw_videos/*.avi'))\n",
+    "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
     "# input_files = [ '../raw_videos/Pa_Fri_43dpf_GroupC_n5_20200711_1550.avi' ]\n",
+    "input_files = [ '../raw_videos/SF_Sun_84dpf_GroupA_n5_20201018_1540.avi' ]\n",
     "\n",
     "print(len(input_files))\n",
     "\n",
@@ -114,9 +115,9 @@
     "    repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
     "    input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
     "    \n",
-    "    # If a trial file already exists, skip.\n",
-    "    if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
-    "        continue\n",
+    "#     # If a trial file already exists, skip.\n",
+    "#     if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
+    "#         continue\n",
     "    \n",
     "    input_dict[input_file] = {}\n",
     "    input_dict[input_file].update(default_settings)\n",
@@ -155,9 +156,12 @@
    "source": [
     "''' Create output directories. Compute backgrounds. '''\n",
     "\n",
+    "if not os.path.exists(tracking_dir):\n",
+    "    os.mkdir(tracking_dir)\n",
+    "\n",
+    "\n",
     "# If not None, look for pre-existing backgrounds in bkg_dir.\n",
-    "# bkg_dir = None\n",
-    "bkg_dir = os.path.join(tracking_dir,'../full_21-01-17') # \n",
+    "bkg_dir = os.path.relpath(os.path.join(tracking_dir,'../full_21-01-17')) # \n",
     "# bkg_dir = '/home/yaouen/Desktop/larval_schooling on trilab_data/tracking/full_21-01-17'\n",
     "\n",
     "\n",
@@ -191,12 +195,13 @@
     "                shutil.copy2(f1,f2)\n",
     "#         continue\n",
     "    except:\n",
-    "        %tb\n",
-    "#     # Otherwise, compute background.\n",
-    "#     tracker.init_video_input()\n",
-    "#     tracker.init_background()\n",
-    "#     tracker.init_secondary_background()\n",
-    "#     tracker.release()\n",
+    "        pass\n",
+    "#         %tb\n",
+    "    # Otherwise, compute background.\n",
+    "    tracker.init_video_input()\n",
+    "    tracker.init_background()\n",
+    "    tracker.init_secondary_background()\n",
+    "    tracker.release()\n",
     "\n",
     "print('Done')"
    ]
@@ -301,7 +306,7 @@
     "\n",
     "\n",
     "# Multi-threading doesn't work in Windows. If the OS is Windows, set n_thread to 1.\n",
-    "n_threads = 1 if 'windows' in platform.system().lower() else 5\n",
+    "n_threads = 1 if 'windows' in platform.system().lower() else 1\n",
     "\n",
     "if n_threads==1:\n",
     "    for input_file in input_dict.keys():\n",
