Continued implementing track fixing in "viewer2.py", "tracker/gui_classes.py", and "tracker/gui_mainWindow.py":
- Renamed fixes "move" and "orient" to "position" and "orientation" and changed the former's shortcut from "m" to "p". That way the two shortcuts, "p" and "o", are right next to each other on the keyboard. This is particularly useful when specifying whether to edit positions, orientations, or both in the new "delete" and "interpolate" fixes.

- Implemented fixes "delete" and "interpolate". To delete the position and/or orientation of a fish in the current frame, select the fish then press "d" and either "p" (to delete the position), "o" (to delete the orientation), or both together. To fill in the coordinates of a fish from their last known value to the current frame, select the fish then press "i" and either "p" (to interpolate the position), "o" (to interpolate the orientation), or both together. This only works if the coordinate has a valid value in the current frame.

- Tweaked the fix history format. The frame number now comes second, right after the fix's name.

- Phased out old viewer.

--- a/track.ipynb
+++ b/track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,11 @@
     "    \n",
     "    # Contour detection.\n",
     "    n_blur           =  7,    # square-root of n-pixels for threshold blurring\n",
-    "    block_size       = 15,    # contour block size\n",
+    "    block_size       = 31,    # contour block size\n",
     "    threshold_offset = 13,    # threshold offset for contour-finding\n",
     "    min_area         = 25,    # minimum area for detection\n",
-    "    max_area         = 600,   # maximum area for detection\n",
-    "    ideal_area       = 100,   # ideal area to rank contours in first frame (default=(min_area+max_area)/2)\n",
+    "    max_area         = 800,   # maximum area for detection\n",
+    "    ideal_area       = 150,   # ideal area to rank contours in first frame (default=(min_area+max_area)/2)\n",
     "    max_aspect       = 15,    # maximum aspect ratio for detection\n",
     "    ideal_aspect     = 3,     # ideal aspect ratio to rank contours in first frame (default=max_aspect/2)\n",
     "    area_penalty     = 0.5,   # weight of area change when connecting fish across frames\n",
@@ -88,9 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "    Pa_sat_7dpf_GroupA_n2a_202104171441\n",
+      "    sf_wed_7dpf_groupA_n2_202104141325\n"
+     ]
+    }
+   ],
    "source": [
     "''' Select input files to track and an output directory for each. '''\n",
     "\n",
@@ -98,14 +109,15 @@
     "tracking_dir = 'output'\n",
     "\n",
     "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
+    "input_files = sorted(glob('../raw_videos2/videos/*.avi'))\n",
     "# input_files = [ '../raw_videos/Pa_Fri_43dpf_GroupC_n5_20200711_1550.avi' ]\n",
-    "input_files = [ '../raw_videos/SF_Sun_84dpf_GroupA_n5_20201018_1540.avi' ]\n",
+    "# input_files = [ '../raw_videos2/videos/pa_wed_28dpf_groupA_n5_202104281846.avi' ]\n",
     "\n",
     "print(len(input_files))\n",
     "\n",
     "input_dict = {}\n",
     "for input_file in input_files:\n",
-    "    logging.info(input_file)\n",
+    "#     print(input_file)\n",
     "    d,fn       = os.path.split(input_file)\n",
     "    fn,ext     = os.path.splitext(fn)\n",
     "    output_dir = os.path.join(tracking_dir,fn)\n",
@@ -115,9 +127,9 @@
     "    repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
     "    input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
     "    \n",
-    "#     # If a trial file already exists, skip.\n",
-    "#     if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
-    "#         continue\n",
+    "    # If a trial file already exists, skip.\n",
+    "    if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
+    "        continue\n",
     "    \n",
     "    input_dict[input_file] = {}\n",
     "    input_dict[input_file].update(default_settings)\n",
@@ -142,17 +154,25 @@
     "\n",
     "print(len(input_dict))\n",
     "\n",
-    "# for f,D in input_dict.items():\n",
-    "#     print('   ',D['trial_name'])"
+    "for f,D in input_dict.items():\n",
+    "    print('   ',D['trial_name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Video capture released                                                                                                                                                                             Done\n"
+     ]
+    }
+   ],
    "source": [
     "''' Create output directories. Compute backgrounds. '''\n",
     "\n",
@@ -208,9 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Tank detection complete.                                                                                                                                                                           Done\n"
+     ]
+    }
+   ],
    "source": [
     "''' Trace tanks. '''\n",
     "\n",
@@ -246,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,11 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../raw_videos2/videos/Pa_sat_7dpf_GroupA_n2a_202104171441.avi\n",
+      "     Done                                                                                                                                                                                               ../raw_videos2/videos/sf_wed_7dpf_groupA_n2_202104141325.avi\n",
+      "     Done                                                                                                                                                                                               "
+     ]
+    }
+   ],
    "source": [
     "import tracker\n",
     "reload(tracker.utils)\n",
